--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* display background color black on navbar scroll */
 .navbarScroll.navbarDark {
-    background-color: black;
+    background-color: #121212;
 }
 
 /* hero background image */
@@ -26,13 +26,17 @@
     color: white;
 }
 
+
+
 /* spacing on all sections */
-/* #about, #services, #portfolio, #contact {
+#about, #services, #portfolio, #contact {
     margin-top: 4rem;
     padding-top: 4rem;
-} */
+    background-color: #151515;
+}
 #contact {
     padding-bottom: 4rem;
+    background-color: #151515;
 }
 /* about section image css */
 .imageAboutPage {
@@ -43,6 +47,7 @@
 .servicesText.card {
     height: 280px;
     cursor: pointer;
+    background-color: #121212;
   }
 .servicesIcon {
     font-size: 36px;
@@ -64,14 +69,139 @@
     font-size: 36px;
     cursor: pointer;
 }
-.fa-facebook:hover,.fa-instagram:hover,.fa-twitter:hover,.fa-linkedin:hover, .fa-twitch:hover {
-    color: #303030;
-}
-.fab {
-    color: #000000;
-}
+
+
 /* footer styling */
 #footer {
-    background-color: #808080;
+    background-color: #121212;
     text-align: center;
 }
+
+*{  
+  margin:0;  
+  padding:0;  
+  box-sizing: border-box;  
+}  
+
+.site-footer {  
+ background-color: #121212;  
+ padding: 45px 0 20px;  
+ font-size: 15px;  
+ line-height: 24px;  
+ color: #737373;  
+ box-shadow: 0 10px 20px rgba(0,0,0,0.5);  
+}  
+.site-footer hr {  
+ border-top-color: #bbb;  
+ opacity: 0.5;  
+}  
+.site-footer hr.small {  
+ margin: 20px 0;  
+}  
+.site-footer h6 {  
+ color: #fff;  
+ font-size: 16px;  
+ text-transform: uppercase;  
+ margin-top: 5px;  
+ letter-spacing: 2px;  
+}  
+.site-footer a {  
+ color: #737373;  
+}  
+.site-footer a:hover {  
+ color: #fff;  
+ text-decoration: none;  
+}   
+.footer-links {  
+ padding-left: 0;  
+ list-style: none;  
+}  
+.footer-links li {  
+ display: block;  
+}  
+.footer-links a {  
+ color: #737373;  
+}  
+.footer-links a:active,  
+.footer-links a:focus,  
+.footer-links a:hover {  
+ color: #fff;  
+ text-decoration: none;  
+}   
+.site-footer .social-icons {  
+ text-align: right;  
+}  
+.site-footer .social-icons a {  
+ width: 40px;  
+ height: 40px;  
+ line-height: 40px;  
+ margin-left: 6px;  
+ margin-right: 0;  
+ border-radius: 100%;  
+ background-color: #333333;  
+}  
+.copyright-text {  
+ margin: 0;  
+}  
+@media (max-width: 991px) {  
+ .site-footer [class^="col-"] {  
+  margin-bottom: 30px;  
+ }  
+}  
+@media (max-width: 767px) {  
+ .site-footer {  
+  padding-bottom: 0;  
+ }  
+ .site-footer .copyright-text,  
+ .site-footer .social-icons {  
+  text-align: center;  
+ }  
+}  
+.social-icons {  
+ padding-left: 0;  
+ margin-bottom: 0;  
+ list-style: none;  
+}  
+.social-icons li {  
+ display: inline-block;  
+ margin-bottom: 4px;  
+}   
+.social-icons a {  
+ background-color: #eceeef;  
+ color: #7a7a7a;  
+ font-size: 16px;  
+ display: inline-block;  
+ line-height: 44px;  
+ width: 44px;  
+ height: 44px;  
+ text-align: center;  
+ margin-right: 8px;  
+ border-radius: 100%;  
+ -webkit-transition: all 0.2s linear;  
+ -o-transition: all 0.2s linear;  
+ transition: all 0.2s linear;  
+}  
+.logo{  
+ color:#eb6857;  
+}  
+.social-icons a:active,  
+.social-icons a:focus,  
+.social-icons a:hover {  
+ color: #fff;  
+ background-color: #212121;  
+}   
+.social-icons a.facebook:hover {  
+ background-color: #212121;  
+}  
+.social-icons a.twitter:hover {  
+ background-color: #212121;  
+}  
+.social-icons a.linkedin:hover {  
+ background-color: #212121;  
+}  
+.social-icons a.behance:hover {  
+ background-color: #212121;  
+}
+.social-icons a.instagram:hover {  
+    background-color: #212121; 
+}  
