--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 /* display background color black on navbar scroll */
 .navbarScroll.navbarDark {
-    background-color: black;
+    background-color: #050505;
 }
+
 
 /* hero background image */
 .bgimage {
@@ -25,9 +26,12 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    color: white;
+    color: #dfdfdf;
 }
 
+.services-text{
+    color: #dfdfdf;
+}
 /* spacing on all sections */
 #about, #services, #portfolio, #contact {
     margin-top: 4rem;
@@ -36,6 +40,12 @@
 #contact {
     padding-bottom: 4rem;
 }
+
+#services {
+    margin-top: 4rem;
+    background-color: #121212;
+    padding-bottom: 2rem;
+}
 /* about section image css */
 .imageAboutPage {
     width: 100%;
@@ -43,13 +53,30 @@
 
 /* services section css */
 .servicesText.card {
-    height: 280px;
+    height: 240px;
     cursor: pointer;
+    border: 0px;
+    background-color: #000;
+    border-radius: 25px;
+    
   }
 .servicesIcon {
     font-size: 20px;
     text-align: left;
     width: 100%;
+    color: #dfdfdf;
+}
+
+.card-body{
+    background-color: #222222;
+    border-radius: 25px;
+    border: 0px;
+}
+
+.card-body:hover{
+    background-color: #2d2d2d;
+    border-radius: 25px;
+    border: 0px;
 }
 
 .card-title {
@@ -57,11 +84,13 @@
     font-size: 1.4rem;
 }
 .card:hover .servicesIcon {
-    color: #121212;
+    color: #dfdfdf;
 }
 .servicesText:hover {
-    border: 1px solid #121212;
+    border: 0px solid #121212;
+    border-radius: 25px;
 }
+
 
 /* footer styling */
 #footer {
@@ -198,3 +227,6 @@
 .social-icons a.github:hover {  
     background-color: #212121; 
 }  
+
+
+
