--- a/style.css
+++ b/style.css
@@ -6,20 +6,23 @@
 
 /* hero background image */
 .bgimage {
-    height:100vh;
+    height: 100vh;
     background: url('images/heroImage.jpeg');
-    background-size:cover;
-    position:relative;
+    background-size: cover;
+    position: relative;
 }
+
 /* text css above hero image*/
 .hero_title {
     font-size: 4.5rem;
 }
+
 .hero_desc {
     font-size: 2rem;
     margin-left: 10%;
     margin-right: 10%;
 }
+
 .hero-text {
     text-align: center;
     position: absolute;
@@ -29,33 +32,28 @@
     color: #dfdfdf;
 }
 
-.apexandover { 
-    background:none; 
-    border:none;
+.apexandover {
+    background: none;
+    border: none;
     color: #050505;
-    text-underline-offset: 80rem; 
+    text-underline-offset: 80rem;
 }
+
 .apexandover:hover {
     color: #0073ba;
 }
 
-.africawork_s { 
-    background:none; 
-    border:none;
+.africawork_s {
+    background: none;
+    border: none;
     color: #050505;
-    text-underline-offset: 80rem; 
- 
+    text-underline-offset: 80rem;
+
 }
+
 .africawork_s:hover {
     color: #dd406b;
 }
-
-
-
-
-
-
-
 
 .services-text {
     color: #dfdfdf;
@@ -66,18 +64,15 @@
 }
 
 /* spacing on all sections */
-#services, #contact {
-    margin-top: 4rem;
+#services, #contact, #about {
+    padding-top: 4rem;
+    padding-bottom: 4rem;
+}
+
+#portfolio {
     padding-top: 4rem;
 }
 
-#about{
-    padding-top: 4rem;
-}
-
-#portfolio{
-    padding-top: 4rem;
-}
 #contact {
     padding-bottom: 4rem;
 }
@@ -93,6 +88,7 @@
     background-color: #050505;
     padding-bottom: 4rem;
 }
+
 /* about section image css */
 .imageAboutPage {
     width: 100%;
@@ -105,8 +101,9 @@
     border: 0px;
     background-color: #1e1e1e;
     border-radius: 25px;
-    
-  }
+
+}
+
 .servicesIcon {
     font-size: 20px;
     text-align: left;
@@ -114,7 +111,7 @@
     color: #dfdfdf;
 }
 
-.card-body:hover{
+.card-body:hover {
     background-color: #2d2d2d;
     border-radius: 25px;
     border: 0px;
@@ -125,13 +122,16 @@
     text-align: left;
     font-size: 1.4rem;
 }
+
 .card:hover .servicesIcon {
     color: #dfdfdf;
 }
+
 .servicesText:hover {
     border: 0px solid #191919;
     border-radius: 25px;
 }
+
 /* portfolio section css */
 
 
@@ -147,12 +147,13 @@
 
 
 
-.card2{
+.card2 {
     background-color: #1e1e1e;
     border-radius: 25px;
     border: 0px;
 }
-.card-body2{
+
+.card-body2 {
     padding: 2rem;
 }
 
@@ -163,6 +164,7 @@
     border-radius: 25px;
     border: 0px;
 }
+
 .portfolioText:hover {
     border: 0px solid #191919;
     border-radius: 25px;
@@ -174,135 +176,211 @@
     text-align: center;
 }
 
-*{  
-  margin:0;  
-  padding:0;  
-  box-sizing: border-box;  
-}  
-
-.site-footer {  
- background-color: #050505;  
- padding: 45px 0 20px;  
- font-size: 15px;  
- line-height: 24px;  
- color: #737373;  
- box-shadow: 0 10px 20px rgba(0,0,0,0.5);  
-}  
-.site-footer hr {  
- border-top-color: #bbb;  
- opacity: 0.5;  
-}  
-.site-footer hr.small {  
- margin: 20px 0;  
-}  
-.site-footer h6 {  
- color: #fff;  
- font-size: 16px;  
- text-transform: uppercase;  
- margin-top: 5px;  
- letter-spacing: 2px;  
-}  
-.site-footer a {  
- color: #737373;  
-}  
-.site-footer a:hover {  
- color: #fff;  
- text-decoration: none;  
-}   
-.footer-links {  
- padding-left: 0;  
- list-style: none;  
-}  
-.footer-links li {  
- display: block;  
-}  
-.footer-links a {  
- color: #737373;  
-}  
-.footer-links a:active,  
-.footer-links a:focus,  
-.footer-links a:hover {  
- color: #fff;  
- text-decoration: none;  
-}   
-.site-footer .social-icons {  
- text-align: right;  
-}  
-.site-footer .social-icons a {  
- width: 40px;  
- height: 40px;  
- line-height: 40px;  
- margin-left: 6px;  
- margin-right: 0;  
- border-radius: 100%;  
- background-color: #333333;  
-}  
-.copyright-text {  
- margin: 0;  
-}  
-@media (max-width: 991px) {  
- .site-footer [class^="col-"] {  
-  margin-bottom: 30px;  
- }  
-}  
-@media (max-width: 767px) {  
- .site-footer {  
-  padding-bottom: 0;  
- }  
- .site-footer .copyright-text,  
- .site-footer .social-icons {  
-  text-align: center;  
- }  
-}  
-.social-icons {  
- padding-left: 0;  
- margin-bottom: 0;  
- list-style: none;  
-}  
-.social-icons li {  
- display: inline-block;  
- margin-bottom: 4px;  
-}   
-.social-icons a {  
- background-color: #ffffff;  
- color: #7a7a7a;  
- font-size: 16px;  
- display: inline-block;  
- line-height: 44px;  
- width: 44px;  
- height: 44px;  
- text-align: center;  
- margin-right: 8px;  
- border-radius: 100%;  
- -webkit-transition: all 0.2s linear;  
- -o-transition: all 0.2s linear;  
- transition: all 0.2s linear;  
-}  
- 
-.social-icons a:active,  
-.social-icons a:focus,  
-.social-icons a:hover {  
- color: #fff;  
- background-color: #212121;  
-}   
-.social-icons a.facebook:hover {  
- background-color: #212121;  
-}  
-.social-icons a.twitter:hover {  
- background-color: #212121;  
-}  
-.social-icons a.linkedin:hover {  
- background-color: #212121;  
-}  
-.social-icons a.behance:hover {  
- background-color: #212121;  
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
-.social-icons a.instagram:hover {  
-    background-color: #212121; 
-}  
-.social-icons a.github:hover {  
-    background-color: #212121; 
-}  
+
+.site-footer {
+    background-color: #050505;
+    padding: 45px 0 20px;
+    font-size: 15px;
+    line-height: 24px;
+    color: #737373;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5);
+}
+
+.site-footer hr {
+    border-top-color: #bbb;
+    opacity: 0.5;
+}
+
+.site-footer hr.small {
+    margin: 20px 0;
+}
+
+.site-footer h6 {
+    color: #fff;
+    font-size: 16px;
+    text-transform: uppercase;
+    margin-top: 5px;
+    letter-spacing: 2px;
+}
+
+.site-footer a {
+    color: #737373;
+}
+
+.site-footer a:hover {
+    color: #fff;
+    text-decoration: none;
+}
+
+.footer-links {
+    padding-left: 0;
+    list-style: none;
+}
+
+.footer-links li {
+    display: block;
+}
+
+.footer-links a {
+    color: #737373;
+}
+
+.footer-links a:active,
+.footer-links a:focus,
+.footer-links a:hover {
+    color: #fff;
+    text-decoration: none;
+}
+
+.site-footer .social-icons {
+    text-align: right;
+}
+
+.site-footer .social-icons a {
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    margin-left: 6px;
+    margin-right: 0;
+    border-radius: 100%;
+    background-color: #333333;
+}
+
+.copyright-text {
+    margin: 0;
+}
+
+@media (max-width: 991px) {
+    .site-footer [class^="col-"] {
+        margin-bottom: 30px;
+    }
+}
+
+@media (max-width: 767px) {
+    .site-footer {
+        padding-bottom: 0;
+    }
+
+    .site-footer .copyright-text,
+    .site-footer .social-icons {
+        text-align: center;
+    }
+}
+
+.social-icons {
+    padding-left: 0;
+    margin-bottom: 0;
+    list-style: none;
+}
+
+.social-icons li {
+    display: inline-block;
+    margin-bottom: 4px;
+}
+
+.social-icons a {
+    background-color: #ffffff;
+    color: #7a7a7a;
+    font-size: 16px;
+    display: inline-block;
+    line-height: 44px;
+    width: 44px;
+    height: 44px;
+    text-align: center;
+    margin-right: 8px;
+    border-radius: 100%;
+    -webkit-transition: all 0.2s linear;
+    -o-transition: all 0.2s linear;
+    transition: all 0.2s linear;
+}
+
+.social-icons a:active,
+.social-icons a:focus,
+.social-icons a:hover {
+    color: #fff;
+    background-color: #212121;
+}
+
+.social-icons a.facebook:hover {
+    background-color: #212121;
+}
+
+.social-icons a.twitter:hover {
+    background-color: #212121;
+}
+
+.social-icons a.linkedin:hover {
+    background-color: #212121;
+}
+
+.social-icons a.behance:hover {
+    background-color: #212121;
+}
+
+.social-icons a.instagram:hover {
+    background-color: #212121;
+}
+
+.social-icons a.github:hover {
+    background-color: #212121;
+}
 
 
 
+
+
+.card-button {
+    padding-left: 0;
+    margin-bottom: 0;
+    list-style: none;
+}
+
+.card-button li {
+    display:inline-flex;
+    margin-bottom: 4px;
+}
+
+.card-button a {
+    background-color: #ffffff;
+    color: #121212;
+    display: inline-flex;
+    text-align: center;
+    margin-right: 8px;
+    width: max-content;
+}
+
+.card-button a:active,
+.card-button a:focus,
+.card-button a:hover {
+    color: #fff;
+    background-color: #212121;
+}
+
+.card-button a.facebook:hover {
+    background-color: #212121;
+}
+
+.card-button a.twitter:hover {
+    background-color: #212121;
+}
+
+.card-button a.linkedin:hover {
+    background-color: #212121;
+}
+
+.card-button a.behance:hover {
+    background-color: #212121;
+}
+
+.card-button a.instagram:hover {
+    background-color: #212121;
+}
+
+.card-button a.github:hover {
+    background-color: #212121;
+}
