--- a/style.css
+++ b/style.css
@@ -1,8 +1,7 @@
 /* display background color black on navbar scroll */
 .navbarScroll.navbarDark {
-    background-color: #050505;
+  background-color: #050505;
 }
-
 
 /* hero background image */
 /* .bgimage {
@@ -13,412 +12,419 @@
 } */
 
 .bgimage {
-	height: 100vh;
-	background: linear-gradient(45deg, rgba(35, 14, 18, 0.7), rgba(12, 31, 35, 0.7), rgba(30, 31, 11, 0.7), rgba(28, 11, 16, 0.7), rgba(11, 28, 28, 0.7)) 0 0 / 1000% no-repeat, url(https://picsum.photos/g/2000/1200?image=6) 0 0 / cover no-repeat;
-	-webkit-animation: gradientAnimation 40s ease infinite;
-	animation: gradientAnimation 40s ease infinite;
+  height: 100vh;
+  background: linear-gradient(
+        45deg,
+        rgba(35, 14, 18, 0.7),
+        rgba(12, 31, 35, 0.7),
+        rgba(30, 31, 11, 0.7),
+        rgba(28, 11, 16, 0.7),
+        rgba(11, 28, 28, 0.7)
+      )
+      0 0 / 1000% no-repeat,
+    url(https://picsum.photos/g/2000/1200?image=6) 0 0 / cover no-repeat;
+  -webkit-animation: gradientAnimation 40s ease infinite;
+  animation: gradientAnimation 40s ease infinite;
 }
 @-webkit-keyframes gradientAnimation {
-	0%   { background-position: 0% 30%, 0 0;}
-	50%  { background-position: 100% 70%, 0 0;}
-	100% { background-position: 0% 30%, 0 0;}
+  0% {
+    background-position: 0% 30%, 0 0;
+  }
+  50% {
+    background-position: 100% 70%, 0 0;
+  }
+  100% {
+    background-position: 0% 30%, 0 0;
+  }
 }
 @keyframes gradientAnimation {
-	0%   { background-position: 0% 30%, 0 0;}
-	50%  { background-position: 100% 70%, 0 0;}
-	100% { background-position: 0% 30%, 0 0;}
+  0% {
+    background-position: 0% 30%, 0 0;
+  }
+  50% {
+    background-position: 100% 70%, 0 0;
+  }
+  100% {
+    background-position: 0% 30%, 0 0;
+  }
 }
-
 
 /* text css above hero image*/
 .hero_title {
-    font-size: 4.5rem;
-    margin-left: 10%;
-    margin-right: 10%;
+  font-size: 4.5rem;
+  margin-left: 10%;
+  margin-right: 10%;
 }
 
 .hero_desc {
-    font-size: 2rem;
-    margin-left: 10%;
-    margin-right: 10%;
+  font-size: 2rem;
+  margin-left: 10%;
+  margin-right: 10%;
 }
 
 .hero-text {
-    text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: #dfdfdf;
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #dfdfdf;
 }
 
 .link-text {
-    background: none;
-    border: none;
-    color: #050505;
+  background: none;
+  border: none;
+  color: #050505;
 }
 
 .link-text:hover {
-    color: #0073ba;
+  color: #0073ba;
 }
 
 .services-text {
-    color: #dfdfdf;
+  color: #dfdfdf;
 }
 
 .portfolio-text {
-    color: #dfdfdf;
+  color: #dfdfdf;
 }
 
 /* spacing on all sections */
-#services, #contact, #about {
-    padding-top: 4rem;
-    padding-bottom: 4rem;
+#services,
+#contact,
+#about {
+  padding-top: 4rem;
+  padding-bottom: 4rem;
 }
 
 #portfolio {
-    padding-top: 4rem;
+  padding-top: 4rem;
 }
 
 #contact {
-    padding-bottom: 4rem;
+  padding-bottom: 4rem;
 }
 
 #services {
-    padding-top: 4rem;
-    background-color: #121212;
-    padding-bottom: 4rem;
+  padding-top: 4rem;
+  background-color: #121212;
+  padding-bottom: 4rem;
 }
 
 #portfolio {
-    padding-top: 4rem;
-    background-color: #050505;
-    padding-bottom: 4rem;
+  padding-top: 4rem;
+  background-color: #050505;
+  padding-bottom: 4rem;
 }
 
 /* about section image css */
 .imageAboutPage {
-    width: 100%;
+  width: 100%;
 }
 
 /* services section css */
 .servicesText.card {
-    height: 245px;
-    cursor: pointer;
-    border: 0px;
-    background-color: #1e1e1e;
-    border-radius: 25px;
-
+  height: 245px;
+  cursor: pointer;
+  border: 0px;
+  background-color: #1e1e1e;
+  border-radius: 25px;
 }
 
 .servicesIcon {
-    font-size: 20px;
-    text-align: left;
-    width: 100%;
-    color: #dfdfdf;
+  font-size: 20px;
+  text-align: left;
+  width: 100%;
+  color: #dfdfdf;
 }
 
 .card-body:hover {
-    background-color: #2d2d2d;
-    border-radius: 25px;
-    border: 0px;
-    transform: scale(1.015);
+  background-color: #2d2d2d;
+  border-radius: 25px;
+  border: 0px;
+  transform: scale(1.015);
 }
 
 .card-title {
-    text-align: left;
-    font-size: 1.4rem;
+  text-align: left;
+  font-size: 1.4rem;
 }
 
 .card:hover .servicesIcon {
-    color: #dfdfdf;
+  color: #dfdfdf;
 }
 
 .servicesText:hover {
-    border: 0px solid #191919;
-    border-radius: 25px;
+  border: 0px solid #191919;
+  border-radius: 25px;
 }
 
 /* portfolio section css */
 
-
-
 .portfolioText.card {
-    height: 245px;
-    cursor: pointer;
-    border: 0px;
-    background-color: #1e1e1e;
-    border-radius: 25px;
-
+  height: 245px;
+  cursor: pointer;
+  border: 0px;
+  background-color: #1e1e1e;
+  border-radius: 25px;
 }
 
-
-
 .card2 {
-    background-color: #1e1e1e;
-    border-radius: 25px;
-    border: 0px;
+  background-color: #1e1e1e;
+  border-radius: 25px;
+  border: 0px;
 }
 
 .card-body2 {
-    padding: 2rem;
+  padding: 2rem;
 }
 
 .card2:hover {
-
-    transform: scale(1.015);
-    background-color: #282828;
-    border-radius: 25px;
-    border: 0px;
+  transform: scale(1.015);
+  background-color: #282828;
+  border-radius: 25px;
+  border: 0px;
 }
 
 .portfolioText:hover {
-    border: 0px solid #191919;
-    border-radius: 25px;
+  border: 0px solid #191919;
+  border-radius: 25px;
 }
 
 /* footer styling */
 #footer {
-    background-color: #050505;
-    text-align: center;
+  background-color: #050505;
+  text-align: center;
 }
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 .site-footer {
-    background-color: #050505;
-    padding: 45px 0 20px;
-    font-size: 15px;
-    line-height: 24px;
-    color: #737373;
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5);
+  background-color: #050505;
+  padding: 45px 0 20px;
+  font-size: 15px;
+  line-height: 24px;
+  color: #737373;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5);
 }
 
 .site-footer hr {
-    border-top-color: #bbb;
-    opacity: 0.5;
+  border-top-color: #bbb;
+  opacity: 0.5;
 }
 
 .site-footer hr.small {
-    margin: 20px 0;
+  margin: 20px 0;
 }
 
 .site-footer h6 {
-    color: #fff;
-    font-size: 16px;
-    text-transform: uppercase;
-    margin-top: 5px;
-    letter-spacing: 2px;
+  color: #fff;
+  font-size: 16px;
+  text-transform: uppercase;
+  margin-top: 5px;
+  letter-spacing: 2px;
 }
 
 .site-footer a {
-    color: #737373;
+  color: #737373;
 }
 
 .site-footer a:hover {
-    color: #fff;
-    text-decoration: none;
+  color: #fff;
+  text-decoration: none;
 }
 
 .footer-links {
-    padding-left: 0;
-    list-style: none;
+  padding-left: 0;
+  list-style: none;
 }
 
 .footer-links li {
-    display: block;
+  display: block;
 }
 
 .footer-links a {
-    color: #737373;
+  color: #737373;
 }
 
 .footer-links a:active,
 .footer-links a:focus,
 .footer-links a:hover {
-    color: #fff;
-    text-decoration: none;
+  color: #fff;
+  text-decoration: none;
 }
 
 .site-footer .social-icons {
-    text-align: right;
+  text-align: right;
 }
 
 .site-footer .social-icons a {
-    width: 40px;
-    height: 40px;
-    line-height: 40px;
-    margin-left: 6px;
-    margin-right: 0;
-    border-radius: 100%;
-    background-color: #333333;
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  margin-left: 6px;
+  margin-right: 0;
+  border-radius: 100%;
+  background-color: #333333;
 }
 
 .copyright-text {
-    margin: 0;
+  margin: 0;
 }
 
 @media (max-width: 991px) {
-    .site-footer [class^="col-"] {
-        margin-bottom: 30px;
-    }
+  .site-footer [class^="col-"] {
+    margin-bottom: 30px;
+  }
 }
 
 @media (max-width: 767px) {
-    .site-footer {
-        padding-bottom: 0;
-    }
+  .site-footer {
+    padding-bottom: 0;
+  }
 
-    .site-footer .copyright-text,
-    .site-footer .social-icons {
-        text-align: center;
-    }
+  .site-footer .copyright-text,
+  .site-footer .social-icons {
+    text-align: center;
+  }
 }
 
 .social-icons {
-    padding-left: 0;
-    margin-bottom: 0;
-    list-style: none;
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
 }
 
 .social-icons li {
-    display: inline-block;
-    margin-bottom: 4px;
+  display: inline-block;
+  margin-bottom: 4px;
 }
 
 .social-icons a {
-    background-color: #ffffff;
-    color: #7a7a7a;
-    font-size: 16px;
-    display: inline-block;
-    line-height: 44px;
-    width: 44px;
-    height: 44px;
-    text-align: center;
-    margin-right: 8px;
-    border-radius: 100%;
-    -webkit-transition: all 0.2s linear;
-    -o-transition: all 0.2s linear;
-    transition: all 0.2s linear;
+  background-color: #ffffff;
+  color: #7a7a7a;
+  font-size: 16px;
+  display: inline-block;
+  line-height: 44px;
+  width: 44px;
+  height: 44px;
+  text-align: center;
+  margin-right: 8px;
+  border-radius: 100%;
+  -webkit-transition: all 0.2s linear;
+  -o-transition: all 0.2s linear;
+  transition: all 0.2s linear;
 }
 
 .social-icons a:active,
 .social-icons a:focus,
 .social-icons a:hover {
-    color: #fff;
-    background-color: #212121;
+  color: #fff;
+  background-color: #212121;
 }
 
 .social-icons a.facebook:hover {
-    background-color: #212121;
+  background-color: #212121;
 }
 
 .social-icons a.twitter:hover {
-    background-color: #212121;
+  background-color: #212121;
 }
 
 .social-icons a.linkedin:hover {
-    background-color: #212121;
+  background-color: #212121;
 }
 
 .social-icons a.behance:hover {
-    background-color: #212121;
+  background-color: #212121;
 }
 
 .social-icons a.instagram:hover {
-    background-color: #212121;
+  background-color: #212121;
 }
 
 .social-icons a.github:hover {
-    background-color: #212121;
+  background-color: #212121;
 }
 
-
-
 .card-disabbled {
-    padding-left: 0;
-    margin-bottom: 0;
-    list-style: none;
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
 }
 
 .card-disabbled li {
-    display:inline-flex;
-    margin-bottom: 4px;
+  display: inline-flex;
+  margin-bottom: 4px;
 }
 
 .card-disabbled a {
-    background-color: #777777;
-    color: #ffffff;
-    display: inline-flex;
-    text-align: center;
-    margin-right: 8px;
-    width: max-content;
+  background-color: #777777;
+  color: #ffffff;
+  display: inline-flex;
+  text-align: center;
+  margin-right: 8px;
+  width: max-content;
 }
 
 .card-disabbled a:active,
 .card-disabbled a:focus,
 .card-disabbled a:hover {
-    color: #ffffff;
-    background-color: #777777;
+  color: #ffffff;
+  background-color: #777777;
 }
 
-
-
-
-
-
-
 .card-button {
-    padding-left: 0;
-    margin-bottom: 0;
-    list-style: none;
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
 }
 
 .card-button li {
-    display:inline-flex;
-    margin-bottom: 4px;
+  display: inline-flex;
+  margin-bottom: 4px;
 }
 
 .card-button a {
-    background-color: #ffffff;
-    color: #121212;
-    display: inline-flex;
-    text-align: center;
-    margin-right: 8px;
-    width: max-content;
+  background-color: #ffffff;
+  color: #121212;
+  display: inline-flex;
+  text-align: center;
+  margin-right: 8px;
+  width: max-content;
 }
 
 .card-button a:active,
 .card-button a:focus,
 .card-button a:hover {
-    color: #fff;
-    background-color: #212121;
+  color: #fff;
+  background-color: #212121;
 }
 
 .card-button a.facebook:hover {
-    background-color: #212121;
+  background-color: #212121;
 }
 
 .card-button a.twitter:hover {
-    background-color: #212121;
+  background-color: #212121;
 }
 
 .card-button a.linkedin:hover {
-    background-color: #212121;
+  background-color: #212121;
 }
 
 .card-button a.behance:hover {
-    background-color: #212121;
+  background-color: #212121;
 }
 
 .card-button a.instagram:hover {
-    background-color: #212121;
+  background-color: #212121;
 }
 
 .card-button a.github:hover {
-    background-color: #212121;
+  background-color: #212121;
 }
