--- a/style.css
+++ b/style.css
@@ -168,10 +168,10 @@
 }
 
 .card-body:hover {
-  background-color: #2d2d2d;
+  background-color: #050505;
   border-radius: 25px;
   border: 0px;
-  transform: scale(1.015);
+  /* transform: scale(1.015); */
 }
 
 .card-title {
@@ -184,7 +184,7 @@
 }
 
 .servicesText:hover {
-  border: 0px solid #191919;
+  border: 0px solid #050505;
   border-radius: 25px;
 }
 
@@ -194,12 +194,12 @@
   height: 245px;
   cursor: pointer;
   border: 0px;
-  background-color: #1e1e1e;
+  background-color: #050505;
   border-radius: 25px;
 }
 
 .card2 {
-  background-color: #1e1e1e;
+  background-color: #050505;
   border-radius: 25px;
   border: 0px;
 }
@@ -209,14 +209,14 @@
 }
 
 .card2:hover {
-  transform: scale(1.015);
-  background-color: #282828;
+  /* transform: scale(1.015); */
+  background-color: #050505;
   border-radius: 25px;
   border: 0px;
 }
 
 .portfolioText:hover {
-  border: 0px solid #191919;
+  border: 0px solid #050505;
   border-radius: 25px;
 }
 
