--- a/style.css
+++ b/style.css
@@ -205,7 +205,10 @@
 }
 
 .card-body2 {
-  padding: 2rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 1.5rem;
+  padding-bottom: 2rem;
 }
 
 .card2:hover {
