--- a/style.css
+++ b/style.css
@@ -15,6 +15,8 @@
   background: url("images/header.jpg");
   background-size: cover;
   position: relative;
+  background-position: center;
+  background-attachment: fixed;
   -webkit-animation: gradientAnimation 15s ease infinite;
   animation: gradientAnimation 15s ease infinite;
 }
@@ -23,6 +25,8 @@
   background: url("images/header.jpg");
   background-size: cover;
   position: relative;
+  background-position: center;
+  background-attachment: fixed;
   -webkit-animation: gradientAnimation 15s ease infinite;
   animation: gradientAnimation 15s ease infinite;
 }
